--- a/assets/css/starwars.css
+++ b/assets/css/starwars.css
@@ -1,5 +1,11 @@
 body {
 
     background-image: url(../images/5068.jpg);
+    background-size: cover;
     background-repeat: no-repeat;
+    
+        /* background: #ffffff url(../images/5068.jpg) no-repeat 100%; */
+      
+    
+
 }
